# waygate

./: .dockerignore  .editorconfig  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  compose.prod.yml  compose.yml  conftest.py  env.compose.example  env.example  main.py  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  pyproject.toml  release-please-config.json  tests.rest
apps/api/: CHANGELOG.md  README.md  pyproject.toml
apps/api/src/waygate_api/: __init__.py  clients.py  server.py
apps/api/tests/: test_clients.py  test_server.py  test_startup_validation.py  test_webhook_agent_session_route.py  test_webhook_dispatch_errors.py  test_webhook_generic_route.py
apps/compiler/: README.md  pyproject.toml
apps/compiler/golden/: compiler_golden_dataset.json
apps/compiler/src/compiler/: __init__.py  config.py  evaluation.py  graph.py  human_review_flow.py  maintenance.py  middleware.py  state.py  worker.py
apps/compiler/src/waygate_compiler/: registry.py  server.py
apps/compiler/tests/: test_draft_node.py  test_evaluation.py  test_graph_e2e.py  test_human_review_flow.py  test_human_review_node.py  test_maintenance_command.py  test_middleware.py  test_node_helpers.py  test_publish_node.py  test_worker.py
apps/draft-worker/: CHANGELOG.md  README.md  pyproject.toml
apps/draft-worker/src/waygate_draft_worker/: __init__.py
apps/draft-worker/tests/: test_draft_worker_main.py
apps/mcp_server/: README.md  pyproject.toml
apps/mcp_server/src/mcp_server/: __init__.py  __main__.py  auth.py  config.py  main.py  server.py  service.py  trace.py
apps/mcp_server/tests/: test_main.py  test_package_init.py  test_server.py  test_service.py
apps/nats-worker/: CHANGELOG.md  README.md  pyproject.toml
apps/nats-worker/src/waygate_nats_worker/: __init__.py
apps/nats-worker/tests/: test_nats_worker_main.py
apps/receiver/: README.md  pyproject.toml
apps/receiver/src/receiver/: app.py
apps/receiver/tests/: test_checkpoints.py  test_receiver_integration_modes.py  test_settings_api.py  test_trigger_payload.py  test_webhooks_api.py
apps/scheduler/: CHANGELOG.md  README.md  pyproject.toml
apps/scheduler/src/waygate_scheduler/: __init__.py  config.py  server.py
apps/scheduler/tests/: test_scheduler_main.py
apps/web/: CHANGELOG.md  README.md  pyproject.toml
apps/web/src/waygate_web/: __init__.py  server.py  settings.py
apps/web/tests/: test_auth_setup.py  test_runtime_settings.py  test_server.py  test_web_startup_validation.py
apps/worker-app/: CHANGELOG.md  README.md  pyproject.toml
apps/worker-app/src/waygate_worker_app/: __init__.py
apps/worker-app/tests/: test_worker_app_main.py
libs/agent_sdk/: README.md  pyproject.toml
libs/agent_sdk/src/waygate_agent_sdk/: __init__.py  models.py  policy.py  repository.py  scoring.py
libs/agent_sdk/tests/: test_repository.py
libs/core/: CHANGELOG.md  README.md  pyproject.toml
libs/core/src/waygate_core/: __init__.py  bootstrap.py  doc_helpers.py  file_templates.py  llm.py  llm_base.py  llm_registry.py  maintenance.py  observability.py  plugin_base.py  schemas.py  settings.py  settings_registry.py  settings_store.py
libs/core/tests/: test_bootstrap.py  test_communication_plugin_registry.py  test_config_registry_plugin_boundary.py  test_database_models.py  test_doc_helpers.py  test_file_templates.py  test_llm_option_resolution.py  test_llm_workflow_profiles.py  test_maintenance.py  test_migration_metadata_discovery.py  test_observability.py  test_schemas.py  test_settings.py  test_settings_registry.py  test_settings_store.py  test_template_loader.py
libs/storage/: README.md  pyproject.toml
libs/storage/src/waygate_storage/: __init__.py  storage_base.py  storage_registry.py
libs/webhooks/: CHANGELOG.md  README.md  pyproject.toml
libs/webhooks/src/waygate_webhooks/: __init__.py  app.py  dispatch.py  errors.py  handlers.py  openapi.py
libs/webhooks/tests/: test_dispatch_errors.py  test_handlers.py  test_openapi.py
libs/worker/: CHANGELOG.md  README.md  pyproject.toml
libs/worker/src/waygate_worker/: __init__.py  http.py  nats.py  rq.py  runtime.py
libs/worker/tests/: test_http_worker.py  test_nats_worker.py  test_rq_worker.py  test_runtime.py
libs/workflows/: CHANGELOG.md  README.md  pyproject.toml
libs/workflows/src/waygate_workflows/: __init__.py  router.py  schema.py  (+1 more)
plugins/communication-http/: CHANGELOG.md  README.md  pyproject.toml
plugins/communication-http/tests/: test_plugin.py
plugins/communication-nats/: CHANGELOG.md  README.md  pyproject.toml
plugins/communication-nats/tests/: test_communication_nats_plugin.py
plugins/communication-rq/: CHANGELOG.md  README.md  pyproject.toml
plugins/communication-rq/tests/: test_communication_rq_plugin.py
plugins/github_receiver/: pyproject.toml
plugins/github_receiver/tests/: test_github_receiver_stub.py
plugins/linkwarden_receiver/: README.md  pyproject.toml
plugins/linkwarden_receiver/tests/: test_linkwarden_receiver.py
plugins/local-storage/: CHANGELOG.md  README.md  pyproject.toml
plugins/local-storage/tests/: test_local_storage_plugin.py  test_plugin.py
plugins/ollama_provider/: README.md  pyproject.toml
plugins/provider-featherless-ai/: CHANGELOG.md  README.md  pyproject.toml
plugins/provider-featherless-ai/tests/: test_featherless_provider_plugin.py  test_provider_featherless_readme_env_vars.py
plugins/provider-ollama/: CHANGELOG.md  README.md  pyproject.toml
plugins/provider-ollama/tests/: test_ollama_provider_plugin.py  test_provider_ollama_readme_env_vars.py  test_readme_env_vars.py
plugins/storage_local/: README.md  pyproject.toml
plugins/storage_local/tests/: test_local_storage.py
plugins/webhook-agent-session/: CHANGELOG.md  README.md  pyproject.toml
plugins/webhook-agent-session/tests/: test_agent_session_plugin.py
plugins/webhook-generic/: CHANGELOG.md  README.md  pyproject.toml
plugins/webhook-generic/tests/: test_webhook_generic_plugin.py
plugins/webhook_generic/: README.md  pyproject.toml
plugins/webhook_generic/tests/: test_webhook_receiver.py
(+284 files in other folders)
