[project]
name            = "waygate"
version         = "0.1.0"
description     = "A Platform for building and maintaining a GAR based knowledge graph"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = ["rich>=14.3.3"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "pyright", "tiktoken", "ty"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["apps/*", "packages/*"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=waygate_api",
    "--cov=waygate_core",
    "--cov-report=term-missing",
]
filterwarnings = [
    # # python-frontmatter v1.1.0 uses codecs.open() which is deprecated in Python 3.14+
    # "ignore::DeprecationWarning:frontmatter",
    # # langchain_core ships pydantic v1 compatibility shims that don't work on Python 3.14+
    # "ignore::UserWarning:langchain_core",
]

[tool.coverage.run]
branch   = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
