[project]
name = "waygate-api"
version = "0.1.0"
description = "Waygate API server"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "waygate-core",
    "waygate-plugin-generic-webhook",
    "waygate-plugin-local-storage",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.uv.sources]
waygate-core                   = { workspace = true }
waygate-plugin-generic-webhook = { workspace = true }
waygate-plugin-local-storage   = { workspace = true }

[project.scripts]
waygate-api = "waygate_api:main"

[build-system]
requires      = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.fastapi]
entrypoint = "waygate_api.server:app"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=waygate_api",
    "--cov-report=term-missing",
]
