[project]
    name = "compiler"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [
        { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
    ]
    requires-python = ">=3.14"
    dependencies = [
        "langgraph>=1.1.6",
        "redis>=7.4.0",
        "rq>=2.7.0",
        "waygate_core",
        "waygate_storage",
        "waygate_plugin_local_storage",
        "waygate_plugin_generic_webhook",
    ]

    [project.scripts]
        waygate-maintenance-sweep = "compiler.maintenance:main"

[tool.uv.sources]
    waygate_core                   = { workspace = true }
    waygate_storage                = { workspace = true }
    waygate_plugin_local_storage   = { workspace = true }
    waygate_plugin_generic_webhook = { workspace = true }

[build-system]
    requires      = ["uv_build>=0.11.3,<0.12.0"]
    build-backend = "uv_build"
