[project]
name = "waygate-draft-worker"
version = "0.1.0"
description = "RQ worker for queued WayGate draft workflow triggers"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "redis>=6.0.0",
    "rq>=2.8.0",
    "waygate-core",
    "waygate-plugin-communication-rq",
    "waygate-plugin-local-storage",
    "waygate-plugin-provider-ollama",
    "waygate-workflows",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.uv.sources]
waygate-core                    = { workspace = true }
waygate-plugin-communication-rq = { workspace = true }
waygate-plugin-local-storage    = { workspace = true }
waygate-plugin-provider-ollama  = { workspace = true }
waygate-workflows               = { workspace = true }

[project.scripts]
waygate-draft-worker = "waygate_draft_worker:main"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=waygate_draft_worker",
    "--cov-report=term-missing",
]
