[project]
name = "waygate-nats-worker"
version = "0.1.1"
description = "JetStream worker for queued WayGate workflow triggers"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "waygate-plugin-local-storage",
    "waygate-plugin-provider-ollama",
    "waygate-worker",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.uv.sources]
waygate-plugin-local-storage   = { workspace = true }
waygate-plugin-provider-ollama = { workspace = true }
waygate-worker                 = { workspace = true }

[project.scripts]
waygate-nats-worker = "waygate_nats_worker:main"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=waygate_nats_worker",
    "--cov-report=term-missing",
]
