[project]
name = "waygate-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler[sqlalchemy]>=3.11.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "waygate-core",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.uv.sources]
waygate-core = { workspace = true }

[project.scripts]
waygate-scheduler = "waygate_scheduler.server:main"

[build-system]
requires      = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=waygate_api",
    "--cov-report=term-missing",
]
