[project]
name = "waygate-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
waygate-scheduler = "waygate_scheduler:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
