[project]
name = "waygate-scheduler"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "waygate-core",
    "waygate-plugin-communication-http",
    "waygate-plugin-communication-nats",
    "waygate-plugin-communication-rq",
]

[tool.uv.sources]
waygate-core                      = { workspace = true }
waygate-plugin-communication-http = { workspace = true }
waygate-plugin-communication-nats = { workspace = true }
waygate-plugin-communication-rq   = { workspace = true }

[project.scripts]
waygate-scheduler = "waygate_scheduler:main"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
