[project]
    name = "waygate-agent-sdk"
    version = "0.1.0"
    description = "WayGate retrieval and briefing SDK"
    readme = "README.md"
    authors = [
        { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
    ]
    requires-python = ">=3.14"
    dependencies = [
        "pydantic>=2.12.5",
        "python-frontmatter",
        "waygate_core",
        "waygate_storage",
    ]

[tool.uv.sources]
    waygate_core    = { workspace = true }
    waygate_storage = { workspace = true }

[build-system]
    requires      = ["uv_build>=0.11.3,<0.12.0"]
    build-backend = "uv_build"
