[project]
    name = "waygate_core"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [
        { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
    ]
    requires-python = ">=3.14"
    dependencies = [
        "langchain-core>=1.2.26",
        "opentelemetry-api>=1.38.0",
        "opentelemetry-exporter-otlp-proto-http>=1.38.0",
        "opentelemetry-sdk>=1.38.0",
        "pydantic>=2.12.5",
        "waygate_storage",
    ]

[tool.uv.sources]
    waygate_storage = { workspace = true }

[build-system]
    requires      = ["uv_build>=0.11.3,<0.12.0"]
    build-backend = "uv_build"
