[project]
name = "waygate-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
