[project]
name = "waygate-plugin-communication-http"
version = "0.1.0"
description = "HTTP communication client plugin for worker dispatch"
readme = "README.md"
authors = [
  { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "waygate-core"]

[tool.uv.sources]
waygate-core = { workspace = true }

[project.entry-points."waygate.plugins.communication"]
communication_http = "waygate_plugin_communication_http.plugin:CommunicationHttpPlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
