[project]
name = "waygate-plugin-communication-http"
version = "0.1.1"
description = "HTTP communication client plugin for worker dispatch"
readme = "README.md"
authors = [
  { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "waygate-core", "waygate-worker"]

[tool.uv.sources]
waygate-core   = { workspace = true }
waygate-worker = { workspace = true }

[project.entry-points."waygate.plugins.communication"]
communication_http = "waygate_plugin_communication_http.plugin:CommunicationHttpPlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=waygate_plugin_communication_http",
  "--cov-report=term-missing",
]
