[project]
name = "waygate-plugin-communication-nats"
version = "0.1.0"
description = "JetStream communication client plugin for worker dispatch"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "nats-py>=2.11.0",
    "pydantic>=2.13.2",
    "waygate-core",
    "waygate-worker",
]

[tool.uv.sources]
waygate-core   = { workspace = true }
waygate-worker = { workspace = true }

[project.entry-points."waygate.plugins.communication"]
communication_nats = "waygate_plugin_communication_nats.plugin:CommunicationNatsPlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
