[project]
name = "waygate-plugin-communication-rq"
version = "0.1.1"
description = "RQ communication client plugin for worker dispatch"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["redis>=6.0.0", "rq>=2.8.0", "waygate-core", "waygate-worker"]

[tool.uv.sources]
waygate-core   = { workspace = true }
waygate-worker = { workspace = true }

[project.entry-points."waygate.plugins.communication"]
communication_rq = "waygate_plugin_communication_rq.plugin:CommunicationRQPlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
