[project]
    name = "waygate-plugin-linkwarden-receiver"
    version = "0.1.0"
    description = "Linkwarden-focused webhook ingestion plugin"
    readme = "README.md"
    authors = [
        { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
    ]
    requires-python = ">=3.14"
    dependencies = ["waygate_core"]

[tool.uv.sources]
    waygate_core = { workspace = true }

[build-system]
    requires      = ["uv_build>=0.11.3,<0.12.0"]
    build-backend = "uv_build"

    [project.entry-points."waygate.plugins.receiver"]
        linkwarden_receiver = "waygate_plugin_linkwarden_receiver.webhook_receiver:LinkwardenReceiver"
