[project]
name = "waygate-plugin-local-storage"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["waygate-core"]

[tool.uv.sources]
waygate-core = { workspace = true }

[project.entry-points."waygate.plugins.storage"]
local_storage = "waygate_plugin_local_storage.plugin:LocalStoragePlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=waygate_plugin_local_storage",
  "--cov-report=term-missing",
]
