[project]
name = "waygate-plugin-ollama-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "waygate_core",
]

[tool.uv.sources]
waygate_core = { workspace = true }

[project.entry-points."waygate.plugins.llm"]
ollama = "waygate_plugin_ollama_provider.ollama_provider:OllamaLLMProvider"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
