[project]
name = "waygate-plugin-local-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = ["waygate_core", "waygate_storage"]

[tool.uv.sources]
waygate_core = { workspace = true }
waygate_storage = { workspace = true }

[project.entry-points."waygate.plugins.storage"]
waygate_storage_local = "waygate_plugin_local_storage.local_storage:LocalStorageProvider"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
