[project]
name = "waygate-plugin-webhook-generic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Buck Brady", email = "22723438+voidrot@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["waygate-core"]

[tool.uv.sources]
waygate-core = { workspace = true }

[project.entry-points."waygate.plugins.webhooks"]
generic_webhook = "waygate_plugin_webhook_generic.plugin:GenericWebhookPlugin"

[build-system]
requires      = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
